--- a/Landing_Page/assets/styles/landing_style.css
+++ b/Landing_Page/assets/styles/landing_style.css
@@ -151,7 +151,7 @@ html {
     - Flex-grow (crescimento)
         * 0 (padrão / não pode crescer)
         * 1 (pode crescer)
-        * 2 (Faz com que ele cresça oi dobro do 1 porque 2 é o dobro de 1) */
+        * 2 (Faz com que ele cresça o dobro do 1 porque 2 é o dobro de 1) */
 
 /*-----------------------------------*\
   #HEADER
@@ -320,10 +320,8 @@ header {
     gap: 1em;
     align-items: center;
     justify-content: center;
-    white-space: nowrap;
     animation: scroll 15s linear infinite;
     transition: transform .4s ease;
-    white-space: nowrap;
     max-height: 100%;
     width: max-content;
 }
@@ -356,7 +354,6 @@ header {
     border: 1px solid rgb(103, 103, 103);
     transition: all .4s ease;
     flex-shrink: 0;
-    vertical-align: middle;
 }
 
 @keyframes scroll {
